--- a/_posts/2013-04-05-database.md
+++ b/_posts/2013-04-05-database.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Back to the Future of Databases
+---
+
+
 Why do we need databases? What a stupid question. I already heard some people say. But it is a legitimate question, and here is an answer that not many people know.
 
 First of all, why can't we just write programs that operate on objects? The answer is, obviously, we don't have enough memory to hold all the data. But why can't we just serialize and store the objects to disk and load them when we need them? The answer is yes we can, but not in Unix, because Unix manages memory as "pages", not as "objects". There are systems who lived before Unix that manage memory as objects, and it worked really well. Here are some pictures of them:
