--- a/_posts/2013-04-05-database.md
+++ b/_posts/2013-04-05-database.md
@@ -8,10 +8,13 @@ Why do we need databases? What a stupid question. I already heard some people sa
 
 First of all, why can't we just write programs that operate on objects? The answer is, obviously, we don't have enough memory to hold all the data. But why can't we just serialize and store the objects to disk and load them when we need them? The answer is yes we can, but not in Unix, because Unix manages memory as "pages", not as "objects". There are systems who lived before Unix that manage memory as objects, and it worked really well. Here are some pictures of them:
 
-![System/38](http://www.yinwang.org/images/system-38.jpg)
+[IBM System/38](http://en.wikipedia.org/wiki/IBM_System/38)
+![IBM System/38](http://www.yinwang.org/images/system-38.jpg)
 
+[Lisp Machine](http://en.wikipedia.org/wiki/Lisp_machine)
 ![Lisp Machine](http://www.yinwang.org/images/lisp-machine.jpg)
 
+[Oberon Operating System](https://www.ics.uci.edu/~franz/Site/pubs-pdf/BC03.pdf)
 ![Oberon Operating System](http://www.yinwang.org/images/oberon.png)
 
 Those systems never needed, and will never need, databases. Data integration is seamless. You don't need to know the existence of a "disk", a "file system", or a "database". You can just allocate objects and work on them. You can pretend that you can allocate infinite number of objects. Unfortunately most of those systems were terribly expensive and no single person could afford them. Plus they had problems in other aspects of their design. Finally, they died out.
