--- a/_posts/2013-04-08-cpp-const.md
+++ b/_posts/2013-04-08-cpp-const.md
@@ -41,9 +41,9 @@ But there is a catch here: whether you can put 'const' here depends on the funct
 
     void foo2(char* in2) { ... }
 
-Is this to say that you should declare foo2 as  void foo2(const char* in2)? It all depends on whether foo2 actually modifies its argument or not. If it does, then there is no way you can declare in2 as 'const', consequently you cannot declare foo as taking a const char* either. Then the type of foo should be "void foo(char* in)", not having the 'const'.
+Is this to say that you should declare `foo2` as  `void foo2(const char* in2)`? It all depends on whether `foo2` actually modifies its argument or not. If it does, then there is no way you can declare `in2` as 'const', consequently you cannot declare foo as taking a `const char*` either. Then the type of foo should be `void foo(char* in)`, not having the 'const'.
 
-There is no way you should use 'const' in foo then, because the helper foo2 modifies the data. You have to say this honestly: "I may modify the contents of in, because one of the functions I call modifies it."
+There is no way you should use 'const' in foo then, because the helper `foo2` modifies the data. You have to say this honestly: "I may modify the contents of in, because one of the functions I call modifies it."
 
 This is where it can get painful in C++, because the other functions you call may be written by other people and they may not follow the same principles I'm describing here. They may not have 'const' on their parameter types even though they haven't modified the parameter in their function body. This is not their fault, because writing 'const' is so boring. Some automatic inference can certainly be helpful in these cases, but unfortunately inference for 'const' is not provided by C++.
 
@@ -76,4 +76,4 @@ And now bizaar2 needs to be declared as:
 
     void bizaar(const char* in);
 
-And so on... You see how the contagion started? Because bar() returned a const value, which is unnecessarily restrictive. So in general, it is not a good idea to return 'const'.
+And so on... You see how the contagion started? Because `bar()` returned a const value, which is unnecessarily restrictive. So in general, it is not a good idea to return 'const'.
