--- a/_posts/2013-04-08-cpp-const.md
+++ b/_posts/2013-04-08-cpp-const.md
@@ -10,7 +10,7 @@ In this post, I reason philosophically about the true meaning of the 'const' ann
 
 First, the rule for 'const' annotations for variables:
 
-Rule 1. As a variable, declare yourself as 'const' if you want to be inlined, or if you don't want to be modified.
+> Rule 1. As a variable, declare yourself as 'const' if you want to be inlined, or if you don't want to be modified.
 
 By this principle, these examples are legitimate:
 
@@ -21,7 +21,7 @@ These declarations can be global variables as well as local variables. Declaring
 
 Now we just have one other rule. This one concerns the 'const' annotations on functions:
 
-Rule 2. As a function, be self-disciplined about what you take, but be relaxed on what you give.
+> Rule 2. As a function, be self-disciplined about what you take, but be relaxed on what you give.
 
 This means, put 'const' on the parameters whenever you are sure that you will by no chance modify the input argument, but NEVER put 'const' on the return type.
 
